--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "axios": "^0.20.0",
     "better-scroll": "^1.15.0",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "normalize.css": "^8.0.1",
+    "postcss-import": "^12.0.1",
+    "postcss-url": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
