--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-import": "^12.0.1",
     "postcss-url": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-awesome-mui": "^1.7.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
